force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/DU_PrimName__c.field-meta.xml
<CustomField>
    <fullName>DU_PrimName__c</fullName>
    <description>The single name by which the entity is primarily known or identified.</description>
    <inlineHelpText>The single name by which the entity is primarily known or identified.</inlineHelpText>
    <label>DU Primary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>