force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/family_treeRole_DU_code__c.field-meta.xml
<CustomField>
    <fullName>family_treeRole_DU_code__c</fullName>
    <description>A unique code assigned by Dun &amp; Bradstreet to identify describing family tree role.</description>
    <inlineHelpText>A unique code assigned by Dun &amp; Bradstreet to identify describing family tree role.</inlineHelpText>
    <label>Family TreeRole-DU-Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>