force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/Fins_yearlyRevenue_value__c.field-meta.xml
<CustomField>
    <fullName>Fins_yearlyRevenue_value__c</fullName>
    <description>The monetary value of income received from customers from the sale of the entity&apos;s goods and/or services.  This is the gross sales minus any returns, rebates/discounts, allowances for damages or shortages, shipping expenses passed on to the customer.</description>
    <inlineHelpText>The monetary value of income received from customers from the sale of the entity&apos;s goods and/or services.  This is the gross sales minus any returns, rebates/discounts, allowances for damages or shortages, shipping expenses passed on to the customer.</inlineHelpText>
    <label>Fins Yearly Revenue Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>