force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/GU_numOfEmpl_reliabilityDescr__c.field-meta.xml
<CustomField>
    <fullName>GU_numOfEmpl_reliabilityDescr__c</fullName>
    <description>The integrity of the employee figures (e.g., actual, estimated, or modeled).</description>
    <inlineHelpText>The integrity of the employee figures (e.g., actual, estimated, or modeled).</inlineHelpText>
    <label>GU NumOfEmpl Reliability Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>