force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/hq_ind_numberofemployees_infoscopedesc__c.field-meta.xml
<CustomField>
    <fullName>hq_ind_numberofemployees_infoscopedesc__c</fullName>
    <description>The scope of Number of Employees value (e.g., Consolidated, Individual, HQ only).</description>
    <inlineHelpText>The scope of Number of Employees value (e.g., Consolidated, Individual, HQ only).</inlineHelpText>
    <label>NumEmpl-HQ/Indiv-Info Scope Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>