force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/hq_ind_numberofemployees_val__c.field-meta.xml
<CustomField>
    <fullName>hq_ind_numberofemployees_val__c</fullName>
    <description>The total number of people engaged by the entity to perform its operations. The scope of this employee figure is identified in informationScopeDescription.</description>
    <inlineHelpText>The total number of people engaged by the entity to perform its operations. The scope of this employee figure is identified in informationScopeDescription.</inlineHelpText>
    <label>NumEmpl-HQ/Indiv-Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>