force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/IndustCodes_Descr_hoovers_priority2__c.field-meta.xml
<CustomField>
    <fullName>IndustCodes_Descr_hoovers_priority2__c</fullName>
    <description>The D&amp;B Hoovers Industry description that identifies the business activity in which the entity is engaged. The entity performs the 2nd greatest percentage of its business within this industry.</description>
    <inlineHelpText>The D&amp;B Hoovers Industry description that identifies the business activity in which the entity is engaged. The entity performs the 2nd greatest percentage of its business within this industry.</inlineHelpText>
    <label>D&amp;B Hoovers Industry Descrptn Priority 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>