force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/IndustCodes_Descr_US_1987_SIC_priority4__c.field-meta.xml
<CustomField>
    <fullName>IndustCodes_Descr_US_1987_SIC_priority4__c</fullName>
    <description>The US Standard Industrial Classification (SIC) description that identifies the business activity in which the entity is engaged. The entity performs the 4th greatest percentage of its business within this industry.</description>
    <inlineHelpText>The US Standard Industrial Classification (SIC) description that identifies the business activity in which the entity is engaged. The entity performs the 4th greatest percentage of its business within this industry.</inlineHelpText>
    <label>US 1987 SIC Description Priority 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>