force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/IndustCodes_hoovers_priority6__c.field-meta.xml
<CustomField>
    <fullName>IndustCodes_hoovers_priority6__c</fullName>
    <description>The D&amp;B Hoovers Industry code that identifies the business activity in which the entity is engaged. The entity performs the 6th greatest percentage of its business within this industry.</description>
    <inlineHelpText>The D&amp;B Hoovers Industry code that identifies the business activity in which the entity is engaged. The entity performs the 6th greatest percentage of its business within this industry.</inlineHelpText>
    <label>D&amp;B Hoovers Industry Code Priority 6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>