force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/IndustCodes_NACE_Revision2_priority4__c.field-meta.xml
<CustomField>
    <fullName>IndustCodes_NACE_Revision2_priority4__c</fullName>
    <description>The NACE code that identifies the business activity in which the entity is engaged. The entity performs the 4th greatest percentage of its business within this industry.</description>
    <inlineHelpText>The NACE code that identifies the business activity in which the entity is engaged. The entity performs the 4th greatest percentage of its business within this industry.</inlineHelpText>
    <label>NACE Revision 2 Code Priority 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>