force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/IndustCodes_NAICS_priority3__c.field-meta.xml
<CustomField>
    <fullName>IndustCodes_NAICS_priority3__c</fullName>
    <description>The North American Industry Classification System (NAICS) code that identifies the business activity in which the entity is engaged. The entity performs the 3rd greatest percentage of its business within this industry.</description>
    <inlineHelpText>The North American Industry Classification System (NAICS) code that identifies the business activity in which the entity is engaged. The entity performs the 3rd greatest percentage of its business within this industry.</inlineHelpText>
    <label>NAICS Code Priority 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>