force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/IndustCodes_NAICS_TypeDescr_priority3__c.field-meta.xml
<CustomField>
    <fullName>IndustCodes_NAICS_TypeDescr_priority3__c</fullName>
    <description>The details of the standardized coding scheme used to classify the business activities of an organization. This can be an externally recognized coding scheme as for instance North American Industry Classification System (NAICS) or a proprietary scheme like D&amp;B SIC-8.</description>
    <inlineHelpText>The details of the standardized coding scheme used to classify the business activities of an organization. This can be an externally recognized coding scheme as for instance North American Industry Classification System (NAICS) or a proprietary scheme like D&amp;B SIC-8.</inlineHelpText>
    <label>NAICS TypeDesc Priority 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>