force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/mailingAddr_streetAddr_line1__c.field-meta.xml
<CustomField>
    <fullName>mailingAddr_streetAddr_line1__c</fullName>
    <description>The first line of the address where the entity is located.For example, &amp;quot;41 Central Chambers&amp;quot; in the address 41 Central ChambersDame CourtDublin 2</description>
    <inlineHelpText>The first line of the address where the entity is located.For example, &amp;quot;41 Central Chambers&amp;quot; in the address 41 Central ChambersDame CourtDublin 2</inlineHelpText>
    <label>MailingAddr Street Address Line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>