force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/regstrnums_id_num_typeDescr__c.field-meta.xml
<CustomField>
    <fullName>regstrnums_id_num_typeDescr__c</fullName>
    <description>The type of registration (e.g., Chamber of Commerce Number, Value Added Tax Number, Federal Taxpayer Identification Number, Companies Registry Office Number).</description>
    <inlineHelpText>The type of registration (e.g., Chamber of Commerce Number, Value Added Tax Number, Federal Taxpayer Identification Number, Companies Registry Office Number).</inlineHelpText>
    <label>Registration Number Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>