force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <description>The date the entity chooses to claim as its established date. Note: This date may be different from the Operations Start Date and adheres to ISO 8601 standard.</description>
    <inlineHelpText>The date the entity chooses to claim as its established date. Note: This date may be different from the Operations Start Date and adheres to ISO 8601 standard.</inlineHelpText>
    <label>Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>