force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/stockExchanges_isPrim__c.field-meta.xml
<CustomField>
    <fullName>stockExchanges_isPrim__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is the most important stock exchange among all the stock exchange where the entity&apos;s shares are traded. - If true, indicates that this is the most important Stock Exchange.- If false, indicates that this is not the most important Stock Exchange.</description>
    <inlineHelpText>Indicates if this is the most important stock exchange among all the stock exchange where the entity&apos;s shares are traded. - If true, indicates that this is the most important Stock Exchange.- If false, indicates that this is not the most important Stock Exchange.</inlineHelpText>
    <label>StockExchanges Is Primary</label>
    <type>Checkbox</type>
</CustomField>