force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/tsn_tradestylenames_name_3__c.field-meta.xml
<CustomField>
    <fullName>tsn_tradestylenames_name_3__c</fullName>
    <description>The names the organization trades under for commercial purposes. A &apos;trading style&apos; or &apos;trading as a name&apos; is a name a business chooses to use which is different from their registered company name. For example D&amp;B is a trading style of Dun &amp; Bradstreet Ltd. It is what the business chooses to call itself for marketing purposes.</description>
    <inlineHelpText>The names the organization trades under for commercial purposes. A &apos;trading style&apos; or &apos;trading as a name&apos; is a name a business chooses to use which is different from their registered company name. For example D&amp;B is a trading style of Dun &amp; Bradstreet Ltd. It is what the business chooses to call itself for marketing purposes.</inlineHelpText>
    <label>Trade Style 3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>