force-app/main/default/objects/DNBConnect__D_B_Connect_Company_Profile__c/fields/tsn_tradestylenames_priority_1__c.field-meta.xml
<CustomField>
    <fullName>tsn_tradestylenames_priority_1__c</fullName>
    <description>A numeric value used to identify the relative importance of a Trade Style Name compared to other Trade Style Names. The lower the numeric value the earlier the data is displayed (i.e. 1 indicates the most important name, the second most important etc...)</description>
    <inlineHelpText>A numeric value used to identify the relative importance of a Trade Style Name compared to other Trade Style Names. The lower the numeric value the earlier the data is displayed (i.e. 1 indicates the most important name, the second most important etc...)</inlineHelpText>
    <label>Trade Style 1 Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>